# HardBench

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  update_citations.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile.realman  start_realman.sh
operating_platform/core/: coordinator.py  daemon.py  main.py  record.py  replay.py
operating_platform/dataset/: dorobot_dataset.py  image_writer.py
operating_platform/dataset/visual/: visual_dataset.py
operating_platform/robot/robots/: aloha_manipulator.py  configs.py  dora_zeromq.py  realman_manipulator.py  utils.py
operating_platform/robot/robots/realman_v1/: manipulator.py  monitor.py  pyproject.toml  realman_replay.py  robot_realman_dataflow.yml
operating_platform/robot/robots/realman_v1/scripts/: start_realman.sh
operating_platform/server/aloha_before/: dockerfile  operating_platform_server_test.py  start_server_docker.sh
operating_platform/server/baai/: dockerfile  machine_information.json  operating_platform_server.py  operating_platform_server_test.py  setup.yaml  (+3 more)
operating_platform/utils/: data_file.py  dataset.py  video.py
operating_platform/visual/: visual_dataset.py
scripts/: install_unix.sh  install_windows.ps1  record.sh  replay.sh  run.sh  run_realman_record.sh  start.sh  start_realman.sh  test_rerun.py  visual.sh  visual_html.sh
src/robot_diag/: cli.py  cpu.py  disk.py  gpu.py  mem.py  platforms.py  report_md.py  stats.py  thresholds.py  usb.py  usb_camera.py  utils.py
test/demo1/: operating_platform_server.py
test/piper/: pyproject.toml
(+57 files in other folders)
